--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -12,6 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Login
+    - name: first action
       run: |
         make dev
