--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -11,9 +11,11 @@ jobs:
     name: Set up environment
     runs-on: ubuntu-latest
     container:
-      image: golang:1.16
+      image: cymetricsdev.azurecr.io/security/zap-scard
+      credentials:
+        username: fd43f06b-6880-4d16-a32e-5b240e5568c7
+        password: CuF572Epmm_~MGUzn5XsOQAl780_YOcK_N
     steps:
-    - uses: actions/checkout@v2
     - name: first action
       run: |
-        go version
+        ls -l
