--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -13,8 +13,8 @@ jobs:
     container:
       image: cymetricsdev.azurecr.io/security/email-auth
       credentials:
-        username: fd43f06b-6880-4d16-a32e-5b240e5568c7
-        password: CuF572Epmm_~MGUzn5XsOQAl780_YOcK_N
+        username: ${{ secrets.USER }}
+        password: ${{ secrets.PWD}}
     steps:
     - name: first action
       run: |
